--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -30,6 +30,8 @@
 #app {
   display: block;
   position: relative;
+  overflow: hidden;
+  max-width: 100vw;
   min-height: 100vh;
 }
 
